Many changes to text and added pictures. Added style_article.css for custom picture sizing and different footer. Took footer out of wrapper. Changed menu in Internet History to add link to Article pages.

--- a/public_html/peoplenet.html
+++ b/public_html/peoplenet.html
@@ -19,6 +19,7 @@
         <li><a href="early_internet.html">Early Internet</a></li>
         <li><a href="browser_search.html">Browser & Search</a></li>
         <li><a href="peoplenet.html">People-Net</a></li>
+        <li><a href="pylint_oop.html">OOP Articles</a></li>
     </menu>
     <div id="heading">
         <h2>People-Net: How users dictated the content</h2>
