--- a/public_html/pylint_oop.html
+++ b/public_html/pylint_oop.html
@@ -13,7 +13,7 @@
         <h1>Critical OOP Principals</h1>
     </header>
     <menu>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Internet History</a></li>
         <li><a href="pylint_oop.html">Pylint & OOP</a></li>
         <li><a href="aaa_testing.html">AAA Testing</a></li>
         <li><a href="calc_oop.html">Calculator OOP</a></li>
@@ -26,35 +26,56 @@
         <main>
             <section id="section1">
                 <h2>What is Pylint?</h2>
-                <div class="hoverwrap">
-                    <img src="images/sample.png" alt="This is a picture of a mainframe computer"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/9479603@N02/49755349401">"Mainframe Computer 1960"</a> by <a href="https://www.flickr.com/photos/9479603@N02"> PanelSwitchman</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-                </div>
                 <div class="sectionText">
                     Pylint is a static code checker for python that checks for errors, shows when you stray from a coding standard and looks for code “smells”. A “code smell” is something that “seems” wrong, such as a method that's too long or doesn't have any methods. This is basically a warning that needs to be looked into, however, most times what smells wrong is wrong.
                 </div>
             </section>
             <section id="section2">
                 <h2>What Does Pylint Test?</h2>
-                <div class="hoverwrap">
-                    <img src="images/sample.png" alt="This is a picture of Sputnik satellite"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/26244825@N05/8052668653">"Sputnik-1"</a> by <a href="https://www.flickr.com/photos/26244825@N05"> paukrus</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-                </div>
                 <div class="sectionText">
                     The default standard that Pylint checks the code to is PEP8.
                     Some common errors in Pylint are “line-too-long” which means that the line length threshold has been exceeded, “trailing-whitespace” which means there are spaces at the end of a line, “len-as-condition” which means that you shouldn't use “if len(x) > 0:”, you should use “if x:”.
                     Pylint will let you know if you don't have comments in your files, classes and methods.
+                    <p>
+                        This error message is for a missing docstring (a required comment for a file, class and method). The error message tells you that the error is in the calculator.py file and that it is on line 13, and column 4.
+                    </p>
+                    <div class="short_pic">
+                        <img src="images/pylint_missing_docstring.PNG" alt="This is a picture of a missing docstring"/>
+                        </div>
+
                 </div>
             </section>
             <section id="section3">
                 <h2>How to Configure Against Nuisance Warnings</h2>
-                <div class="hoverwrap">
-                    <img src="images/sample.png" alt="This is a picture of a computer network"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/22555876@N00/142056834">"Network"</a> by <a href="https://www.flickr.com/photos/22555876@N00">Qaanaaq</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                <div class="sectionLeftText">
+
+                    Pylint errors and warnings are very descriptive and point you to the file, line number and column number. It really couldn't get any easier. That said, sometimes pylint gives warnings for things you are doing on purpose, such as a long comment.
                 </div>
-                <div class="sectionText">
-                    Pylint errors and warnings are very descriptive and point you to the file, line number and column number. It really couldn't get any easier. That said, sometimes pylint gives warnings for things you are doing on purpose. The answer to that is to add a directive to disable the warning. For example, if you want to disable the warning for a line that is too long, simply add this command before the offending code: # pylint: disable=line-too-long
+                <div class="short_pic">
+                        <img src="images/pylint_ltl_error.PNG" alt="This is a picture of a missing docstring"/>
                 </div>
+
+                    <br><br><br>
+                <div class="sectionLeftText">
+                    <p>
+                             The answer to that is to add a directive to disable the warning. For example, if you want to disable the warning for a line that is too long, simply add this command before the offending code:
+                        <br># pylint: disable=line-too-long
+                        <br>
+                    </p>
+                </div>
+                <div class="short_pic">
+                   <img src="images/pylint_error_disable.PNG" alt="This is a picture of a missing docstring"/>
+                </div>
+                <div class="sectionLeftText">
+
+                    <p>
+                        ...and no more error!
+                    </p>
+                </div>
+
+
+
+
             </section>
             <section id="section4">
                 <h2>Glossary of OOP terms</h2>
@@ -118,32 +139,32 @@
             </section>
         </main>
         <aside>
-            <h3>JCR Licklider </h3>
-            <div class="hoverwrap">
-                <img src="images/licklider_cc.JPG" alt="This is a picture of JCR Licklider "/>
-                <div class="hovermsg"><a href="https://www.flickr.com/photos/62234213@N00/5131454013">"JCR Licklider"</a> by <a href="https://www.flickr.com/photos/62234213@N00">atduskgreg</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-            </div>
+            <h3>The History of Computing Video</h3>
             <div>
-                Licklider was born on March 11, 1915, in St. Louis, Missouri. He studied at Washington University in St. Louis where he graduated with a triple major in physics, mathematics and psychology and went on to his doctorate. He became a research fellow at MIT in 1943 and in 1950 he became interested in information technology. He had ideas about graphical point and click interfaces, digital libraries, e-commerce and online banking. He learned about time-sharing at a conference in Paris, and developed his own version of time-sharing. In 1962 Licklider joined ARPA (Advanced Research Projects Agency) as head of the Information Processing Techniques Office. His work at ARPA included conceiving of and funding network research. While at IPTO, he convinced some of the most important players in the development of the internet, Ivan Sutherland, Bob Taylor, and Larry Roberts, that an all-encompassing computer network was very important.
+                <iframe width="727" height="409" src="https://www.youtube.com/embed/fFY5103p5-c" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </aside>
         <aside>
-            <h3>The History of Computing Video</h3>
+            <h3>OOP Terminology</h3>
             <div>
-                <iframe src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/zsiCs9_3beo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </aside>
+    </div>
         <footer>
             <span id="Copyright">
                 <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
             </span>
             <span>
-                <a href="https://github.com/bobschicke/internet-history.git">Github Repostory</a>
+                <a href="https://github.com/bobschicke/internet-history/tree/project2">Code Repository</a>
+            </span>
+            <span>
+                <a href="https://github.com/bobschicke/python_articles">Article Repository</a>
             </span>
             <span>
                 <button onclick="w3cValidation()">W3C Validation</button>
             </span>
         </footer>
-    </div>
+
 </body>
 </html>
