--- a/public_html/solid.html
+++ b/public_html/solid.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calculator OOP</title>
+    <title>SOLID</title>
     <meta name="description" content="Calculator OOP Implementation">
     <!-- COMMENT IN HTML -->
     <link rel="stylesheet" href="css/style_article.css">
@@ -13,7 +13,7 @@
         <h1>Critical OOP Principals</h1>
     </header>
     <menu>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Internet History</a></li>
         <li><a href="pylint_oop.html">Pylint & OOP</a></li>
         <li><a href="aaa_testing.html">AAA Testing</a></li>
         <li><a href="calc_oop.html">Calculator OOP</a></li>
@@ -95,32 +95,24 @@
             </section>
         </main>
         <aside>
-            <h3>JCR Licklider </h3>
-            <div class="hoverwrap">
-                <img src="images/licklider_cc.JPG" alt="This is a picture of JCR Licklider "/>
-                <div class="hovermsg"><a href="https://www.flickr.com/photos/62234213@N00/5131454013">"JCR Licklider"</a> by <a href="https://www.flickr.com/photos/62234213@N00">atduskgreg</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-            </div>
+            <h3>Uncle Bob's SOLID principles made easy - In Python</h3>
             <div>
-                Licklider was born on March 11, 1915, in St. Louis, Missouri. He studied at Washington University in St. Louis where he graduated with a triple major in physics, mathematics and psychology and went on to his doctorate. He became a research fellow at MIT in 1943 and in 1950 he became interested in information technology. He had ideas about graphical point and click interfaces, digital libraries, e-commerce and online banking. He learned about time-sharing at a conference in Paris, and developed his own version of time-sharing. In 1962 Licklider joined ARPA (Advanced Research Projects Agency) as head of the Information Processing Techniques Office. His work at ARPA included conceiving of and funding network research. While at IPTO, he convinced some of the most important players in the development of the internet, Ivan Sutherland, Bob Taylor, and Larry Roberts, that an all-encompassing computer network was very important.
-            </div>
+                <iframe width="727" height="409" src="https://www.youtube.com/embed/pTB30aXS77U" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            </div>
         </aside>
-        <aside>
-            <h3>The History of Computing Video</h3>
-            <div>
-                <iframe src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </aside>
-        <footer>
-            <span id="Copyright">
-                <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
-            </span>
-            <span>
-                <a href="https://github.com/bobschicke/internet-history.git">Github Repostory</a>
-            </span>
-            <span>
-                <button onclick="w3cValidation()">W3C Validation</button>
-            </span>
-        </footer>
     </div>
+    <footer>
+        <span id="Copyright">
+            <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
+        </span>
+        <span>
+            <a href="https://github.com/bobschicke/internet-history/tree/project2">Code Repository</a>
+        </span>
+        <span>
+            <a href="https://github.com/bobschicke/python_articles">Article Repository</a>
+        </span>
+        <span>
+            <button onclick="w3cValidation()">W3C Validation</button>
+        </span>
+    </footer>
 </body>
 </html>
