--- a/public_html/aaa_testing.html
+++ b/public_html/aaa_testing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Implementing Pylint</title>
+    <title>AAA Testing</title>
     <meta name="description" content="Pre-Internet">
     <!-- COMMENT IN HTML -->
     <link rel="stylesheet" href="css/style_article.css">
@@ -13,7 +13,7 @@
         <h1>Critical OOP Principals</h1>
     </header>
     <menu>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Internet History</a></li>
         <li><a href="pylint_oop.html">Pylint & OOP</a></li>
         <li><a href="aaa_testing.html">AAA Testing</a></li>
         <li><a href="calc_oop.html">Calculator OOP</a></li>
@@ -26,14 +26,17 @@
         <main>
             <section id="section1">
                 <h2>What is Unit Testing?</h2>
-                <div class="hoverwrap">
-                    <img src="images/sample.png" alt="This is a picture of Sputnik satellite"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/26244825@N05/8052668653">"Sputnik-1"</a> by <a href="https://www.flickr.com/photos/26244825@N05"> paukrus</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-                </div>
                 <div class="sectionText">
                     Unit Testing is a way of testing each part (unit) of the program for proper functionality. Python has a module in its standard library called unittest that contains tools for testing your code.
                     To implement unit testing, you put "test" methods in your project to call and test the "real" methods in your code.
                     The AAA pattern is one way of implementing unit testing.
+                    <p>
+                        On the Calculator project we have test methods for each of the calculator methods that pass a preset list of values, and then test that the results are correct.
+                    </p>
+                </div>
+                <div class="hoverwrap">
+                    <img src="images/unit_test.PNG" alt="This is a picture of Sputnik satellite"/>
+                    <div class="hovermsg">Image by Bob Schicke </div>
                 </div>
             </section>
             <section id="section2">
@@ -65,49 +68,29 @@
                     The "Assert" section checks that the value that was returned e.g. the database values, website status, are what was expected. If they are do not match the expected results then the test will fail.
 
                     It's important to test often, so you don't get too far down the wrong path. If you code a small section and test it, it will be much easier to debug than if you code for a week and then test it. You should test at least as often as you commit, and it's good to commit a couple times a day. If you follow these practices you will never get too far astray.
-
-
-
-                </div>
-            </section>
-            <section id="section3">
-                <h2>How to Configure Against Nuisance Warnings</h2>
-                <div class="hoverwrap">
-                    <img src="images/sample.png" alt="This is a picture of a computer network"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/22555876@N00/142056834">"Network"</a> by <a href="https://www.flickr.com/photos/22555876@N00">Qaanaaq</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-                </div>
-                <div class="sectionText">
-                    Pylint errors and warnings are very descriptive and point you to the file, line number and column number. It really couldn't get any easier. That said, sometimes pylint gives warnings for things you are doing on purpose. The answer to that is to add a directive to disable the warning. For example, if you want to disable the warning for a line that is too long, simply add this command before the offending code: # pylint: disable=line-too-long
                 </div>
             </section>
         </main>
-        <aside>
-            <h3>JCR Licklider </h3>
-            <div class="hoverwrap">
-                <img src="images/licklider_cc.JPG" alt="This is a picture of JCR Licklider "/>
-                <div class="hovermsg"><a href="https://www.flickr.com/photos/62234213@N00/5131454013">"JCR Licklider"</a> by <a href="https://www.flickr.com/photos/62234213@N00">atduskgreg</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-            </div>
+       <aside>
+            <h3>Unit Testing - What, Why, How(AAA Pattern) & Test Doubles(Dummy, Fake, Stub, Mock and Spies)</h3>
             <div>
-                Licklider was born on March 11, 1915, in St. Louis, Missouri. He studied at Washington University in St. Louis where he graduated with a triple major in physics, mathematics and psychology and went on to his doctorate. He became a research fellow at MIT in 1943 and in 1950 he became interested in information technology. He had ideas about graphical point and click interfaces, digital libraries, e-commerce and online banking. He learned about time-sharing at a conference in Paris, and developed his own version of time-sharing. In 1962 Licklider joined ARPA (Advanced Research Projects Agency) as head of the Information Processing Techniques Office. His work at ARPA included conceiving of and funding network research. While at IPTO, he convinced some of the most important players in the development of the internet, Ivan Sutherland, Bob Taylor, and Larry Roberts, that an all-encompassing computer network was very important.
-            </div>
+                <iframe src="https://www.youtube.com/embed/gg4ncqKgq7w" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            </div>
         </aside>
-        <aside>
-            <h3>The History of Computing Video</h3>
-            <div>
-                <iframe src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </aside>
-        <footer>
-            <span id="Copyright">
-                <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
-            </span>
-            <span>
-                <a href="https://github.com/bobschicke/internet-history.git">Github Repostory</a>
-            </span>
-            <span>
-                <button onclick="w3cValidation()">W3C Validation</button>
-            </span>
-        </footer>
     </div>
+    <footer>
+        <span id="Copyright">
+            <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
+        </span>
+        <span>
+            <a href="https://github.com/bobschicke/internet-history/tree/project2">Code Repository</a>
+        </span>
+        <span>
+            <a href="https://github.com/bobschicke/python_articles">Article Repository</a>
+        </span>
+        <span>
+            <button onclick="w3cValidation()">W3C Validation</button>
+        </span>
+    </footer>
+
 </body>
 </html>
