--- a/public_html/arpa-net.html
+++ b/public_html/arpa-net.html
@@ -19,6 +19,7 @@
         <li><a href="early_internet.html">Early Internet</a></li>
         <li><a href="browser_search.html">Browser & Search</a></li>
         <li><a href="peoplenet.html">People-Net</a></li>
+        <li><a href="pylint_oop.html">OOP Articles</a></li>
     </menu>
     <div id="heading">
         <h2>ARPA-NET: The Beginnings of The Internet</h2>
