--- a/public_html/early_internet.html
+++ b/public_html/early_internet.html
@@ -19,6 +19,7 @@
         <li><a href="early_internet.html">Early Internet</a></li>
         <li><a href="browser_search.html">Browser & Search</a></li>
         <li><a href="peoplenet.html">People-Net</a></li>
+        <li><a href="pylint_oop.html">OOP Articles</a></li>
     </menu>
     <div id="heading">
         <h2>Early Internet: The Transition From Military to the People</h2>
