--- a/public_html/index.html
+++ b/public_html/index.html
@@ -183,6 +183,7 @@
         <li><a href="early_internet.html">Early Internet</a></li>
         <li><a href="browser_search.html">Browser & Search</a></li>
         <li><a href="peoplenet.html">People-Net</a></li>
+        <li><a href="pylint_oop.html">OOP Articles</a></li>
     </menu>
     <div id ="heading">
         <h2>Explore The Interesting and Exciting History Of The Internet</h2>
