Added more references and links to the Calculator project code int the calc2 repository. Changed footer to fix links.

--- a/public_html/aaa_testing.html
+++ b/public_html/aaa_testing.html
@@ -35,8 +35,19 @@
                     </p>
                 </div>
                 <div class="hoverwrap">
-                    <img src="images/unit_test.PNG" alt="This is a picture of Sputnik satellite"/>
+                    <img src="images/unit_test.PNG" alt="This is a picture of unit testing"/>
                     <div class="hovermsg">Image by Bob Schicke </div>
+                </div>
+                <div class="sectionLeftText">
+                    This is an example of a test method which tests the add method:
+                    <div class="short_pic">
+                        <img src="images/test_add_method.PNG" alt="This is a picture of unit testing"/>
+                    </div>
+                </div>
+                <div class="sectionLeftText">
+                    <p>
+                        This is a link to the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/tests/calculator_test.py"> calculator_test.py file</a>, which contains the test_calculator_add method.
+                    </p>
                 </div>
             </section>
             <section id="section2">
@@ -82,15 +93,14 @@
             <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
         </span>
         <span>
-            <a href="https://github.com/bobschicke/internet-history/tree/project2">Code Repository</a>
+            <a href="https://github.com/bobschicke/internet-history/tree/project2">Website Repository</a>
         </span>
         <span>
-            <a href="https://github.com/bobschicke/python_articles">Article Repository</a>
+            <a href="https://github.com/bobschicke/calc2/tree/calc_refactor">Calculator Repository</a>
         </span>
         <span>
             <button onclick="w3cValidation()">W3C Validation</button>
         </span>
     </footer>
-
 </body>
 </html>
