--- a/public_html/pylint_oop.html
+++ b/public_html/pylint_oop.html
@@ -41,7 +41,7 @@
                     </p>
                     <div class="short_pic">
                         <img src="images/pylint_missing_docstring.PNG" alt="This is a picture of a missing docstring"/>
-                        </div>
+                    </div>
 
                 </div>
             </section>
@@ -71,11 +71,11 @@
                     <p>
                         ...and no more error!
                     </p>
+                    A more global way to disable warnings and errors is to add the error type to the "disable" list in the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/.pylintrc">pylintrc file</a>.
                 </div>
-
-
-
-
+                <div>
+                    <img src="images/pylint_disable_list.PNG" alt="This is a picture of a pylint disable list"/>
+                </div>
             </section>
             <section id="section4">
                 <h2>Glossary of OOP terms</h2>
@@ -151,20 +151,19 @@
             </div>
         </aside>
     </div>
-        <footer>
-            <span id="Copyright">
-                <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
-            </span>
-            <span>
-                <a href="https://github.com/bobschicke/internet-history/tree/project2">Code Repository</a>
-            </span>
-            <span>
-                <a href="https://github.com/bobschicke/python_articles">Article Repository</a>
-            </span>
-            <span>
-                <button onclick="w3cValidation()">W3C Validation</button>
-            </span>
-        </footer>
-
+    <footer>
+        <span id="Copyright">
+            <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
+        </span>
+        <span>
+            <a href="https://github.com/bobschicke/internet-history/tree/project2">Website Repository</a>
+        </span>
+        <span>
+            <a href="https://github.com/bobschicke/calc2/tree/calc_refactor">Calculator Repository</a>
+        </span>
+        <span>
+            <button onclick="w3cValidation()">W3C Validation</button>
+        </span>
+    </footer>
 </body>
 </html>
