--- a/public_html/calc_oop.html
+++ b/public_html/calc_oop.html
@@ -37,16 +37,11 @@
                     <p>
                     In our Calculator project we use encapsulation in all of our classes. For example, our Calculator class  encapsulates the add, subtract, multiply and divide methods.
                     </p>
+                    Here is a link to the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/calculator/calculator.py"> calculator.py file</a>, which contains the Calculator Class. You can see that this class "Encapsulates" multiple methods.
                 </div>
             </section>
             <section id="section2">
                 <h2>Inheritance:</h2>
-                <!--
-                <div class="hoverwrap">
-                    <img src="images/inheritance.png" alt="This is a picture of a inheritance"/>
-                    <div class="hovermsg">Picture by Bob Schicke</div>
-                </div>
-                -->
                 <div class="sectionText">
                     With Inheritance, you to have a general parent class that is inherited by the child classes. When a child class inherits a parent class it must implement all the parents methods. This can make sense if the child classes can use most of the methods and variables from the parent.
                     For instance, a parent class “Animals” can have variables that would apply to all animals such as weight, color, height, length, life expectancy, habitat. Some examples of children of animals would be Mammals, Reptiles, Fish, Birds. These child classes would add data and methods that were specific to their class, such as fin size, wing span, hair length.
@@ -54,7 +49,16 @@
                         In our Calculator project we have a parent class Calculation that has a tuple “values” and a method to convert “values” to a list of floats. We then have Addition, Subtraction, Multiply and Divide classes that inherit Calculation so that they can use Calculation's members. After inheriting the from Calculation, the children only need to implement a “get_result” function, which needs to be different for each of the operations performed by the children.
                     </p>
                     <img src="images/inheritance.png" alt="This is a picture of a inheritance"/>
-
+                </div>
+                <div class="sectionLeftText">
+                    The way a class inherits from another class is to add the base class as a parameter. You can see how the Addition class has "Calculation" as a parameter.
+                    <div>
+                        <img src="images/addition_class.PNG" alt="Picture of addition class">
+                    </div>
+                </div>
+                <div class="sectionLeftText">
+                    Check out the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/calc/addition.py">addition.py file</a> which contains the Addition class.
+           
                 </div>
             </section>
             <section id="section3">
@@ -63,12 +67,15 @@
                     Polymorphism means that you have the same function name, but have custom implementations based on the type of object or type of data. One example of this is python's “print” method. For example, the print method has custom implementations for integers, strings, lists. You don't need to be concerned with letting the function know what type of data is being printed. The correct implementation is called based on the data that is passed.
                     You can create your own polymorphism by having a property or method in a parent function and then creating a custom implementation in some of the child classes.
                     <p>
-                    We use polymorphism in the Calculator project when the Addition, Subtraction, Multiplication and Division classes implement custom “get_result” methods. When get_result(values) is called on any of the classes it returns the value of the operation.
+                    We use polymorphism in the Calculator project with the Addition, Subtraction, Multiplication and Division classes implement custom “get_result” methods. When get_result(values) is called on any of the classes it returns the value of the operation.
                     </p>
                     <div class="hoverwrap">
                         <img src="images/polymorphism.png" alt="This is a picture of Polymorphism:"/>
                         <div class="hovermsg">Picture by Bob Schicke</div>
                     </div>
+                </div>
+                <div class="sectionLeftText">
+                    Check out how the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/calc/addition.py">Addition Class</a>, the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/calc/subtraction.py">Subtraction Class</a>, the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/calc/multiplication.py">Multiplication Class</a> and the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/calc/division.py">Division Class</a> all implement the "get_result" method in a custom way.
                 </div>
             </section>
             <section id="section4">
@@ -80,10 +87,16 @@
                     <p>
                     And in another layer of abstraction, there is library code that implements the program code above. As programmers we don't necessarily care how a “for” loop is coded in the library. We just need to know how to use it in the program code we write. In the early days of programming, you had to program in machine code. Now we can write 10 lines of code in a few minutes that does more than a program that used to take a week to write on 1000 punch cards, all thanks to abstraction.
                     </p>
+                    In our Calculator project, we can instantiate an Addition object, pass it the list of values, do the calculation and get the result by writing the following command:
+                    <br><code>Addition(values).get_result()</code>
+                    <br>When the above command is run, all the code in the 2 blocks of code below is run. Imagine having to write all that code everytime you wanted to do a calculation? Thank goodness for abstraction!
                 </div>
                 <div class="hoverwrap">
                     <img src="images/abstraction.PNG" alt="This is a picture of abstraction"/>
                     <div class="hovermsg">Picture by Bob Schicke</div>
+                </div>
+                <div class="sectionLeftText">
+                    Check out the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/calc/calculation.py">Calculation Class</a> and the <a href="https://github.com/bobschicke/calc2/blob/calc_refactor/calc/addition.py">Addition Class</a> to see all the code that runs when the "Addition(values).get_result()" command is run.
                 </div>
             </section>
         </main>
@@ -98,10 +111,10 @@
             <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
         </span>
         <span>
-            <a href="https://github.com/bobschicke/internet-history/tree/project2">Code Repository</a>
+            <a href="https://github.com/bobschicke/internet-history/tree/project2">Website Repository</a>
         </span>
         <span>
-            <a href="https://github.com/bobschicke/python_articles">Article Repository</a>
+            <a href="https://github.com/bobschicke/calc2/tree/calc_refactor">Calculator Repository</a>
         </span>
         <span>
             <button onclick="w3cValidation()">W3C Validation</button>
